tests/errors/operators/try_none_crash.sad
x = risk {
    error("fail")
} trap IllegalOperationError {
    # handled
}
show(x.some_property)
